# tinyDB

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  config_json  main.cpp  readme.md
doc/: readme.md
include/: Cursor.h  EnumClass.h  Initializer.h  InputBuffer.h  Macros.h  Pager.h  Row.h  Statement.h  Table.h
src/: Cursor.cpp  Initializer.cpp  InputBuffer.cpp  Pager.cpp  Row.cpp  Statement.cpp  Table.cpp
test/: CMakeLists.txt
test/cmd/: exportCmd  insertCmd
test/testCase/testCase1/: init.py  test_case1.cpp
test/testCase/testCase2/: test_case2.cpp
test/testCase/testCase3/: test_case3.cpp
